*AFTER 2.69* Blender 2.68a crashes upon rendering for both Win7/OSX 10.7 #36474

Closed
opened 2013-08-15 07:54:53 +02:00 by Dee Grimm · 19 comments

%%%--- Operating System, Graphics card ---
Windows 7, Geforce GTX 580 Classified (3GB)
Mac OSX 10.7, AMD Radeon HD 6750M (512MB)

- Blender version with error, and version that worked ---

2.68a, not an issue before with 2.67.

- Short description of error ---

After rendering a few times in a new window, pressing render will cause Blender to crash with no warning or error message. This happens in both the Windows 7 and Mac OSX versions of 2.68a; setting up two scenes in the Compositor with Linked Objects (in both Cycles and Internal).

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

No way to replicate it with any specific action, just pressing render will cause it to crash on both platforms. Likely from the setup above.%%%

%%%--- Operating System, Graphics card --- Windows 7, Geforce GTX 580 Classified (3GB) Mac OSX 10.7, AMD Radeon HD 6750M (512MB) - Blender version with error, and version that worked --- 2.68a, not an issue before with 2.67. - Short description of error --- After rendering a few times in a new window, pressing render will cause Blender to crash with no warning or error message. This happens in both the Windows 7 and Mac OSX versions of 2.68a; setting up two scenes in the Compositor with Linked Objects (in both Cycles and Internal). - Steps for others to reproduce the error (preferably based on attached .blend file) --- No way to replicate it with any specific action, just pressing render will cause it to crash on both platforms. Likely from the setup above.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

#37643 was marked as duplicate of this issue

#37643 was marked as duplicate of this issue

%%%Please attach a .blend file to demonstrate the issue? It's difficult for us to guess how you have set things up exactly.%%%

%%%Please attach a .blend file to demonstrate the issue? It's difficult for us to guess how you have set things up exactly.%%%
Author

%%%I don't want to upload my work for everyone to have, however I could attach the crash log from OSX with details about Blender if that'll help.%%%

%%%I don't want to upload my work for everyone to have, however I could attach the crash log from OSX with details about Blender if that'll help.%%%

%%%@Dee-37 Grimm: remove objects, materials, nodes from your scene until you can still get a crash.
In this way you create a minimal file without your complete work and you also make it easier for developers to check where is the problem.%%%

%%%@Dee-37 Grimm: remove objects, materials, nodes from your scene until you can still get a crash. In this way you create a minimal file without your complete work and you also make it easier for developers to check where is the problem.%%%

%%%And please explain what you mean with "rendering a few times in new window"%%%

%%%And please explain what you mean with "rendering a few times in new window"%%%
Author

%%%What I mean is that the crash will randomly happen. It could crash once I press render, or after a couple of renders. There is also another related issue. If I cancel a render just as it's starting, whether I hit escape or close the window, it may also crash Blender in the same manner. I render two scenes, one from Internal for Freestyle and one in Cycles where I set all the materials. I think setting up these two scenes as RenderLayers is causing the issue since I never experienced this until I started doing this. If I remove one of the scenes, then the crash happens much less often, if at all, but I need the two scenes to render.

I don't want to make public my work, but if I could, I can email one of you the .blend file to test it out. I have a copy that always crashes on me within the first few renders, usually the very first one.%%%

%%%What I mean is that the crash will randomly happen. It could crash once I press render, or after a couple of renders. There is also another related issue. If I cancel a render just as it's starting, whether I hit escape or close the window, it may also crash Blender in the same manner. I render two scenes, one from Internal for Freestyle and one in Cycles where I set all the materials. I think setting up these two scenes as RenderLayers is causing the issue since I never experienced this until I started doing this. If I remove one of the scenes, then the crash happens much less often, if at all, but I need the two scenes to render. I don't want to make public my work, but if I could, I can email one of you the .blend file to test it out. I have a copy that always crashes on me within the first few renders, usually the very first one.%%%

%%%Dee if you can't reproduce the problem in a simpler file, can you build Blender yourself?
A backtrace from a debug build can help.
If you don't know how to do that, let us know if you can at least build blender and you can be instructed on how to get the backtrace.%%%

%%%Dee if you can't reproduce the problem in a simpler file, can you build Blender yourself? A backtrace from a debug build can help. If you don't know how to do that, let us know if you can at least build blender and you can be instructed on how to get the backtrace.%%%

%%%Usually it's possible to simplify the .blend file until it has no value anymore except for bug fixing, for example by replacing meshes with cubes, removing materials and images, etc. That also helps identify the exact option that is causing the problem.

If it's not possible to simplify the file you can send it to me, at brecht@blender.org.%%%

%%%Usually it's possible to simplify the .blend file until it has no value anymore except for bug fixing, for example by replacing meshes with cubes, removing materials and images, etc. That also helps identify the exact option that is causing the problem. If it's not possible to simplify the file you can send it to me, at brecht@blender.org.%%%
Author

%%%I emailed the file earlier today to Brecht.

I want to add that since I stopped rendering in a New Window, the crashing hasn't been an issue at all. I prefer a New Window, but I can continue by doing Full Screen instead. This is as far as I can narrow it down.%%%

%%%I emailed the file earlier today to Brecht. I want to add that since I stopped rendering in a New Window, the crashing hasn't been an issue at all. I prefer a New Window, but I can continue by doing Full Screen instead. This is as far as I can narrow it down.%%%

%%%Thanks for the file, I could reproduce the crash.

Developer note: the cause of the crash is that apparently the render thread is messing with the editmode data which it shouldn't. A problem is that at the moment it can't detect this in BKE_object_handle_update, there's only the G.is_rendering which is not what we need. We actually need some sort of EvaluationContext that indicates if we evaluate for render, what the current time is, etc. I'll have to talk to Sergey since he's working on similar issues.

Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
0 org.blenderfoundation.blender 0x0000000108a82b19 CustomData_interp + 169
1 org.blenderfoundation.blender 0x0000000108b6ef90 getCCGDerivedMesh + 4608
2 org.blenderfoundation.blender 0x0000000108b6d6d8 subsurf_make_derived_from_derived + 248
3 org.blenderfoundation.blender 0x0000000108a3836a editbmesh_build_data + 2202
4 org.blenderfoundation.blender 0x0000000108a3a150 editbmesh_get_derived_cage_and_final + 176
5 org.blenderfoundation.blender 0x00000001085c2789 draw_object + 10489
6 org.blenderfoundation.blender 0x00000001085dc4f0 view3d_main_area_draw + 5792

Thread 13:
0 org.blenderfoundation.blender 0x0000000108a349aa ccgSubSurf_getFaceEdge + 10
1 org.blenderfoundation.blender 0x0000000108b76f4a ss_sync_from_uv + 954
2 org.blenderfoundation.blender 0x0000000108b6f8e1 getCCGDerivedMesh + 6993
3 org.blenderfoundation.blender 0x0000000108b6d6d8 subsurf_make_derived_from_derived + 248
4 org.blenderfoundation.blender 0x0000000108a3836a editbmesh_build_data + 2202
5 org.blenderfoundation.blender 0x0000000108b04ac9 BKE_object_handle_update_ex + 873
6 org.blenderfoundation.blender 0x0000000108b4112e scene_update_tagged_recursive + 110
7 org.blenderfoundation.blender 0x0000000108b4138d BKE_scene_update_for_newframe + 285
8 org.blenderfoundation.blender 0x000000010880635c RE_engine_render + 268
9 org.blenderfoundation.blender 0x00000001088197b1 do_render_3d + 17
%%%

%%%Thanks for the file, I could reproduce the crash. Developer note: the cause of the crash is that apparently the render thread is messing with the editmode data which it shouldn't. A problem is that at the moment it can't detect this in BKE_object_handle_update, there's only the G.is_rendering which is not what we need. We actually need some sort of EvaluationContext that indicates if we evaluate for render, what the current time is, etc. I'll have to talk to Sergey since he's working on similar issues. Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 org.blenderfoundation.blender 0x0000000108a82b19 CustomData_interp + 169 1 org.blenderfoundation.blender 0x0000000108b6ef90 getCCGDerivedMesh + 4608 2 org.blenderfoundation.blender 0x0000000108b6d6d8 subsurf_make_derived_from_derived + 248 3 org.blenderfoundation.blender 0x0000000108a3836a editbmesh_build_data + 2202 4 org.blenderfoundation.blender 0x0000000108a3a150 editbmesh_get_derived_cage_and_final + 176 5 org.blenderfoundation.blender 0x00000001085c2789 draw_object + 10489 6 org.blenderfoundation.blender 0x00000001085dc4f0 view3d_main_area_draw + 5792 Thread 13: 0 org.blenderfoundation.blender 0x0000000108a349aa ccgSubSurf_getFaceEdge + 10 1 org.blenderfoundation.blender 0x0000000108b76f4a ss_sync_from_uv + 954 2 org.blenderfoundation.blender 0x0000000108b6f8e1 getCCGDerivedMesh + 6993 3 org.blenderfoundation.blender 0x0000000108b6d6d8 subsurf_make_derived_from_derived + 248 4 org.blenderfoundation.blender 0x0000000108a3836a editbmesh_build_data + 2202 5 org.blenderfoundation.blender 0x0000000108b04ac9 BKE_object_handle_update_ex + 873 6 org.blenderfoundation.blender 0x0000000108b4112e scene_update_tagged_recursive + 110 7 org.blenderfoundation.blender 0x0000000108b4138d BKE_scene_update_for_newframe + 285 8 org.blenderfoundation.blender 0x000000010880635c RE_engine_render + 268 9 org.blenderfoundation.blender 0x00000001088197b1 do_render_3d + 17 %%%
Member

%%%There's an old report in tracker where I collect all cases related to data updating in UI while render.
https://projects.blender.org/tracker/index.php?func=detail&aid=29308&group_id=9&atid=498

I suggest to move this there too?%%%

%%%There's an old report in tracker where I collect all cases related to data updating in UI while render. https://projects.blender.org/tracker/index.php?func=detail&aid=29308&group_id=9&atid=498 I suggest to move this there too?%%%

%%%Just quick update on this reports.

The issue is actually solved in my GSoC branch, but it might take some time to get all the changes backported to trunk. Think this is doable for 2.70. No chance getting this fixed for 2.69 since codebase is already frozen and fix requires quite a few design changes.

Marking report as READY now.%%%

%%%Just quick update on this reports. The issue is actually solved in my GSoC branch, but it might take some time to get all the changes backported to trunk. Think this is doable for 2.70. No chance getting this fixed for 2.69 since codebase is already frozen and fix requires quite a few design changes. Marking report as READY now.%%%

Added subscriber: @MarkTitchener

Added subscriber: @MarkTitchener

◀ Merged tasks: #37643.

◀ Merged tasks: #37643.

This issue was referenced by blender/blender-addons-contrib@602dcb47b0

This issue was referenced by blender/blender-addons-contrib@602dcb47b09d683e1693663ec8a03295c2d57850

This issue was referenced by 602dcb47b0

This issue was referenced by 602dcb47b09d683e1693663ec8a03295c2d57850

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 602dcb47b0.

Closed by commit 602dcb47b0.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36474
No description provided.